<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.m4rc310</groupId>
	<artifactId>open</artifactId>
	<version>1.0.20</version>

	<packaging>pom</packaging>
	<name>${project.artifactId}</name>
	<description>Open Sales</description>
	<url>https://github.com/m4rc310RCP/opensales</url>

	<developers>
		<developer>
			<id>m4rc310</id>
			<name>Marcelo Lopes</name>
			<email>marcelo.utfpr@me.com</email>
			<organization>M4RC310</organization>
			<organizationUrl>https://dev.m4r310.com.br</organizationUrl>
		</developer>
	</developers>

	<properties>
		<lifecycle-mapping-artifactId>lifecycle-mapping</lifecycle-mapping-artifactId>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<java.version>17</java.version>
		<spqr.version>0.12.4</spqr.version>
		<!--		<spring-boot.version>2.7.16</spring-boot.version>-->
		<spring-boot.version>3.2.2</spring-boot.version>
		<fastjson.version>1.2.24</fastjson.version>
		<spqr.utils.version>0.0.7</spqr.utils.version>
	</properties>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>
			scm:git:git@github.com:m4rc310RCP/api-open.git</connection>
		<developerConnection>
			scm:git:ssh://git@github.com:m4rc310RCP/api-open.git</developerConnection>
		<url>https://github.com/m4rc310RCP/api-open</url>
	</scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>br.com.m4rc310</groupId>
				<artifactId>br-com-m4rc310-libs</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>br.com.m4rc310</groupId>
				<artifactId>br-com-m4rc310-weather</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>br.com.m4rc310</groupId>
				<artifactId>br-com-m4rc310-gql</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>br.com.m4rc310</groupId>
				<artifactId>br-com-m4rc310-gtim</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>

					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration> ÷ <keyname>${gpg.keyname}</keyname>
							<passphraseServerId>
							${gpg.keyname}</passphraseServerId>
							<!-- 
							-->
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>${lifecycle-mapping-artifactId}</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-compiler-plugin
										</artifactId>
										<versionRange>
											[3.10.1,)
										</versionRange>
										<goals>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>br-com-m4rc310-libs</module>
		<module>br-com-m4rc310-starter</module>
		<module>br-com-m4rc310-gql</module>
		<module>br-com-m4rc310-weather</module>
		<module>br-com-m4rc310-gtim</module>
	</modules>
</project>